--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -3,11 +3,11 @@
 }
 
 .long {
-	height: 600px;
+	height: 700px;
 }
 
 .short {
-	height: 450px;
+	height: 600px;
 }
 
 .center {
@@ -32,6 +32,11 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.game-icons {
+	height: 350px;
+	margin-left: 200px;
 }
 
 .between-text-block {
@@ -59,6 +64,10 @@
 
 .game-img3 {
 	background-image: url('/images/mtg-press-1.jpg');
+}
+
+.discord {
+	background-image: url('/images/discord-banner-press-1.png');
 }
 
 #footer {
