--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -62,20 +62,20 @@ html
 							else
 								li: a(href='/keystone/signin') Sign In
 						ul.nav.navbar-nav.navbar-right
-							table.center
+							table
 								tr
 									td
 										<a href="https://www.youtube.com/user/pixelpubtv" target="_blank">
-											img(src='/images/youtube.png').small-icon
+											img(src='/images/youtube.png').navbar-icon
 									td
 										<a href="https://www.facebook.com/pixelpub" target="_blank">
-											img(src='/images/facebook.png').small-icon
+											img(src='/images/facebook.png').navbar-icon
 									td
 										<a href="https://www.instagram.com/pixelpubtv/" target="_blank">
-											img(src='/images/instagram.png').small-icon
+											img(src='/images/instagram.png').navbar-icon
 									td
 										<a href="https://twitter.com/pixelpubtv" target="_blank">
-											img(src='/images/twitter.png').small-icon
+											img(src='/images/twitter.png').navbar-icon
 								
 		//- BODY
 		#body
@@ -102,16 +102,16 @@ html
 				tr
 					td
 						<a href="https://www.youtube.com/user/pixelpubtv" target="_blank">
-							img(src='/images/youtube.png').large-icon
+							img(src='/images/youtube.png')
 					td
 						<a href="https://www.facebook.com/pixelpub" target="_blank">
-							img(src='/images/facebook.png').large-icon
+							img(src='/images/facebook.png')
 					td
 						<a href="https://www.instagram.com/pixelpubtv/" target="_blank">
-							img(src='/images/instagram.png').large-icon
+							img(src='/images/instagram.png')
 					td
 						<a href="https://twitter.com/pixelpubtv" target="_blank">
-							img(src='/images/twitter.png').large-icon
+							img(src='/images/twitter.png')
 		
 		//- JAVASCRIPT
 
