lots of changes!

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -21,8 +21,11 @@ img {
 	height: 600px;
 }
 
+.center td {
+	padding: 10px;
+}
+
 .center {
-	width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -39,19 +42,31 @@ img {
 	margin-left: 2%;
 }
 
+h1 {
+	font-size: 3em;
+	font-family: Impact, Charcoal, sans-serif;
+	text-shadow: -1px -1px 0px rgba(255,255,255,0.3), 1px 1px 1px rgba(0,0,0,0.8);
+	opacity: 0.9;
+	text-align: center;
+	padding-top: 35px;
+    padding-bottom: 20px;
+}
+
 .between-text-block {
-	font-size: 100%;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	font-size: 150%;
 	color: #777;
 	background-color: white;
 	text-align: center;
-	padding: 50px 80px;
-	text-align: justify
+	height: 90px;
+	text-shadow: -1px -1px 0px rgba(255,255,255,0.3), 1px 1px 0px rgba(0,0,0,0.8);
+	opacity: 0.7;
 }
 
 /* 4k Screens */
 @media only screen and (width: 2560px), screen and (height: 1100px) {
     .between-text-block {
-		font-size: 175%;
+		font-size: 200%;
 	}
 	
 	.game-icons {
