--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -45,7 +45,7 @@ block content
 			| If your game is not mentioned, start the fire in our community for your game and it may show up on the list!
 			|
 			| Q: This all sounds awesome! How do I become part of this community?
-			| A: Sign up here or use the "Sign Up" button! This will give you access to several community discord channels! From there, it is happy gaming!
+			| A: Join our Discord and game with us! Visit our social media sites (twitter, facebook, instagram), we would love to hear from you!
 			|
 			| Q: Is it "PixelPub" or "Pixel Pub"?
 			| A: Yes
