--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -12,16 +12,21 @@ block content
 				img(src='/images/mtg-logo-press-1.png')#game3Icon
 			td
 				img(src='/images/discord-logo-press-1.png')#discordIcon
-				
-	div#picGame1.game-img1.parallax.long
-	div#descGame1.between-text-block Join our thriving Destiny 2 community as we take on the darkness, help other guardians in need and get some loot!
-	div#picGame2.game-img2.parallax.long
-	div#descGame2.between-text-block Join our WoW partner community "The Bad Mama Jamas" to defeat the legion and take back Azeroth!
-	div#picGame3.game-img3.parallax.long
-	div#descGame3.between-text-block Join our Magic the Gathering Community! Popper, cube, modern, standard, commander!
 	
+	div#picGame1.game-img1.parallax.long
+	h1 Destiny 2 Community
+	p#descGame1.between-text-block Join our thriving Destiny 2 community as we take on the darkness, help other guardians in need and get some loot!
+	div#picGame2.game-img2.parallax.long
+	h1 World of Warcraft Community
+	p#descGame2.between-text-block Join our WoW partner community "The Bad Mama Jamas" to defeat the legion and take back Azeroth!
+	div#picGame3.game-img3.parallax.long
+	h1 Magic the Gathering Community
+	p#descGame3.between-text-block Join our Magic the Gathering Community! Popper, cube, modern, standard, commander!
 	div#picDiscord.discord.parallax.long
-	div#descDiscord.between-text-block Join our Discord! Voice chat channels, text chat channels, a friendly gaming community and Discord has a great phone application to keep in touch wherever you go!
+	h1 Discord Chat!
+	p#descDiscord.between-text-block(style='white-space:pre;')
+		| Join our Discord! Voice chat channels, text chat channels, a friendly gaming community.
+		| Discord has a great phone application to keep in touch wherever you go!
 	
 	script(src='/js/jquery/jquery-1.11.3.min.js')
 	script(src='/js/jquery-ui/jquery-ui.min.js')
