fixed mobile responsive

--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -14,8 +14,8 @@ block content
 				img(src='/images/discord-logo-press-1.png')#discordIcon
 	
 	div#picGame1.game-img1.parallax.long
-	h1 Destiny 2 Community
-	p#descGame1.between-text-block Join our thriving Destiny 2 community as we take on the darkness, help other guardians in need and get some loot!
+	h1 Destiny Community
+	p#descGame1.between-text-block Join our Destiny community as we take on the darkness, help other guardians in need and get some loot! Destiny 2 Hype!
 	div#picGame2.game-img2.parallax.long
 	h1 World of Warcraft Community
 	p#descGame2.between-text-block Join our WoW partner community "The Bad Mama Jamas" to defeat the legion and take back Azeroth!
@@ -23,11 +23,12 @@ block content
 	h1 Magic the Gathering Community
 	p#descGame3.between-text-block Join our Magic the Gathering Community! Popper, cube, modern, standard, commander!
 	div#picDiscord.discord.parallax.long
-	h1 Discord Chat!
-	p#descDiscord.between-text-block(style='white-space:pre;')
-		| Join our Discord! Voice chat channels, text chat channels, a friendly gaming community.
-		| Discord has a great phone application to keep in touch wherever you go!
-	
+	a(href="https://discord.gg/uw3PMqV")
+		h1 Discord Chat!
+	p#descDiscord.between-text-block
+		| Join our Discord! We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
+		| Discord has a great iOS Android applications to keep in touch wherever you go!
+		
 	script(src='/js/jquery/jquery-1.11.3.min.js')
 	script(src='/js/jquery-ui/jquery-ui.min.js')
 	script(src='/js/browserify/dist/bundle.js')
