--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -75,6 +75,13 @@ h1 {
 	}
 }
 
+/* Mobile */
+@media screen and (max-width: 376px) {
+    .between-text-block {
+		font-size: 125%;
+	}
+}
+
 .ppb-1 {
 	background-image: url('/images/ppb-1.jpg');
 	background-size: 100%;
