added links, modified text

--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -81,7 +81,7 @@ html
 							table
 								tr
 									td
-										<a href="https://www.youtube.com/user/pixelpubtv" target="_blank">
+										<a href="https://www.youtube.com/c/pixelpub" target="_blank">
 											img(src='/images/youtube.png').navbar-icon
 									td
 										<a href="https://www.facebook.com/pixelpub" target="_blank">
@@ -117,7 +117,7 @@ html
 			table.center
 				tr
 					td
-						<a href="https://www.youtube.com/user/pixelpubtv" target="_blank">
+						<a href="https://www.youtube.com/c/pixelpub" target="_blank">
 							img(src='/images/youtube.png')
 					td
 						<a href="https://www.facebook.com/pixelpub" target="_blank">
