--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -29,7 +29,7 @@ block content
 			|
 			| Partnered Game Communities:
 			|
-			| - PlayerUnknown's Battlegounds & Guild Wars 2 - In partnership with JHomiefunk
+			| - PlayerUnknown's Battlegounds & Guild Wars 2 - In partnership with #[a(href="https://www.twitch.tv/jhomiefunk") JHomiefunk]
 			| - World of Warcraft - In partnership with "The Bad Mama Jamas"
 			|
 			| Games incoming to PixelPub:
@@ -45,7 +45,7 @@ block content
 			| If your game is not mentioned, start the fire in our community for your game and it may show up on the list!
 			|
 			| Q: This all sounds awesome! How do I become part of this community?
-			| A: Join our Discord and game with us! Visit our social media sites (twitter, facebook, instagram), we would love to hear from you!
+			| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord] and game with us! Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") youtube], #[a(href="https://www.facebook.com/pixelpub") facebook], #[a(href="https://www.instagram.com/pixelpubtv/") instagram], #[a(href="https://twitter.com/pixelpubtv") twitter]), we would love to hear from you!
 			|
 			| Q: Is it "PixelPub" or "Pixel Pub"?
 			| A: Yes
