--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -15,19 +15,19 @@ block content
 	
 	div#picGame1.game-img1.parallax.long
 	h1 Destiny Community
-	p#descGame1.between-text-block Join our Destiny community as we take on the darkness, help other guardians in need and get some loot! Destiny 2 Hype!
+	p#descGame1.between-text-block Join our Destiny community as we take on the darkness, save the galaxy and get some awesome loot!
 	div#picGame2.game-img2.parallax.long
 	h1 World of Warcraft Community
 	p#descGame2.between-text-block Join our WoW partner community "The Bad Mama Jamas" to defeat the legion and take back Azeroth!
 	div#picGame3.game-img3.parallax.long
 	h1 Magic the Gathering Community
-	p#descGame3.between-text-block Join our Magic the Gathering Community! Popper, cube, modern, standard, commander!
+	p#descGame3.between-text-block Join our Magic the Gathering Community! We have avid MtG players in all different categories: Pauper, cube, modern, standard, commander!
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 Discord Chat!
 	p#descDiscord.between-text-block
-		| Join our Discord! We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
-		| Discord has a great iOS Android applications to keep in touch wherever you go!
+		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord]! We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
+		| Discord has great iOS & Android applications to keep in touch wherever you go!
 		
 	script(src='/js/jquery/jquery-1.11.3.min.js')
 	script(src='/js/jquery-ui/jquery-ui.min.js')
