added twitch to front, added twitch assets

--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -11,6 +11,8 @@ block content
 			td
 				img(src='/images/mtg-logo-press-1.png')#game3Icon
 			td
+				img(src='/images/twitch-logo-1.png')#twitchIcon
+			td
 				img(src='/images/discord-logo-press-1.png')#discordIcon
 	
 	div#picGame1.game-img1.parallax.long
@@ -22,6 +24,10 @@ block content
 	div#picGame3.game-img3.parallax.long
 	h1 Magic the Gathering Community
 	p#descGame3.between-text-block Join our Magic the Gathering Community! We have avid MtG players in all different categories: Pauper, cube, modern, standard, commander!
+	div#picTwitch.twitch.parallax.long
+	a(href="https://www.twitch.tv/pixelpub")
+		h1 PixelPub on Twitch
+	p#descTwitch.between-text-block Watch us live on #[a(href="https://www.twitch.tv/pixelpub") Twitch]! <br /> Make sure to say "Hi!" in chat, we love to talk to our twitch chat!
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 Discord Chat!
