--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -8,6 +8,11 @@ img {
 	height: auto;
 }
 
+#twitchIcon {
+	width: 55%;
+	margin-left: 22%;
+}
+
 .navbar-icon {
 	height: 50px;
 	margin-right: 15px;
@@ -101,6 +106,11 @@ h1 {
 
 .game-img3 {
 	background-image: url('/images/mtg-press-1.jpg');
+	background-size: 100%;
+}
+
+.twitch {
+	background-image: url('/images/twitch-banner-1.png');
 	background-size: 100%;
 }
 
