text changes, mobile fixes

--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -25,12 +25,7 @@ block content
 			| - The Elder Scrolls Online
 			| - Battlefield 1
 			| - Overwatch
-			| - Diablo 3 - Necromancer Hype
-			|
-			| Partnered Game Communities:
-			|
-			| - PlayerUnknown's Battlegounds & Guild Wars 2 - In partnership with #[a(href="https://www.twitch.tv/jhomiefunk") JHomiefunk]
-			| - World of Warcraft - In partnership with "The Bad Mama Jamas"
+			| - Diablo 3
 			|
 			| Games incoming to PixelPub:
 			|
