--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -14,16 +14,23 @@ block content
 				img(src='/images/twitch-logo-1.png')#twitchIcon
 			td
 				img(src='/images/discord-logo-press-1.png')#discordIcon
-	
+			
 	div#picGame1.game-img1.parallax.long
-	h1 Destiny Community
-	p#descGame1.between-text-block Join our Destiny community as we take on the darkness, save the galaxy and get some awesome loot!
+	a(href="https://discord.gg/uw3PMqV")
+		h1 RECRUITING GUARDIANS
+	p#descGame1.between-text-block PixelPub is excited for Destiny 2! We will be bringing you day one footage of Destiny 2 along with a new clan! <br />
+		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord] and help us as we take on the darkness, save the galaxy and get some awesome loot!
 	div#picGame2.game-img2.parallax.long
-	h1 World of Warcraft Community
-	p#descGame2.between-text-block Join our WoW partner community "The Bad Mama Jamas" to defeat the legion and take back Azeroth!
-	div#picGame3.game-img3.parallax.long
-	h1 Magic the Gathering Community
-	p#descGame3.between-text-block Join our Magic the Gathering Community! We have avid MtG players in all different categories: Pauper, cube, modern, standard, commander!
+	a(href="https://discord.gg/uw3PMqV")
+		h1 All Players Welcome
+	p#descGame2.between-text-block PixelPub is glad to be partnered with #[a(href="http://us.battle.net/wow/en/guild/bleeding-hollow/The_Bad_Mama_Jamas/") "The Bad Mama Jamas"]. <br/ >
+		| TBMJ is a great group of gamers - helpful, fun, and skilled! Interested in joining? Awesome! <br />
+		| Join in the #[a(href="https://discord.gg/uw3PMqV") Discord], post in the World of Warcraft channel and we can take down the legion!
+	div#picGame3.game-img3.parallax.long 
+	a(href="https://discord.gg/uw3PMqV")
+		h1 Magic the Gathering
+	p#descGame3.between-text-block We have avid MtG players in all different categories: Pauper, cube, modern, standard, commander! <br />
+		| Join in the #[a(href="https://discord.gg/uw3PMqV") Discord] and visit the Magic the Gathering channel today!
 	div#picTwitch.twitch.parallax.long
 	a(href="https://www.twitch.tv/pixelpub")
 		h1 PixelPub on Twitch
@@ -34,7 +41,7 @@ block content
 	p#descDiscord.between-text-block
 		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord]! We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
-		
+	
 	script(src='/js/jquery/jquery-1.11.3.min.js')
 	script(src='/js/jquery-ui/jquery-ui.min.js')
 	script(src='/js/browserify/dist/bundle.js')
