--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -63,12 +63,12 @@ h1 {
 	color: #777;
 	background-color: white;
 	text-align: center;
-	height: 90px;
+	height: 110px;
 	text-shadow: -1px -1px 0px rgba(255,255,255,0.3), 1px 1px 0px rgba(0,0,0,0.8);
 	opacity: 0.7;
 }
 
-/* 4k Screens */
+/* Adjust Text Size */
 @media only screen and (width: 2560px), screen and (height: 1100px) {
     .between-text-block {
 		font-size: 200%;
@@ -76,14 +76,46 @@ h1 {
 	
 	.game-icons {
 		height: 350px;
-		margin-left: 20%;
+		margin-left: 15%;
+	}
+}
+@media only screen and (width: 1440), screen and (height: 686px) {
+    .between-text-block {
+		font-size: 150%;
 	}
 }
 
-/* Mobile */
-@media screen and (max-width: 376px) {
+@media only screen and (width: 1024px), screen and (height: 686px) {
     .between-text-block {
-		font-size: 125%;
+		font-size: 140%;
+	}
+}
+
+@media only screen and (width: 768px), screen and (height: 686px) {
+    .between-text-block {
+		font-size: 130%;
+	}
+}
+
+@media only screen and (max-width: 426px), screen and (max-height: 686px) {
+	h1 {
+		font-size: 190% !important;
+	}
+	
+    .between-text-block {
+		font-size: 120% !important;
+		height: 135px;
+	}
+}
+
+@media only screen and (max-width: 320px), screen and (max-height: 686px) {
+	h1 {
+		font-size: 190% !important;
+	}
+	
+    .between-text-block {
+		font-size: 120% !important;
+		height: 180px;
 	}
 }
 
