changed a lot of text on front page, took away bounce and added a drop show

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -8,6 +8,10 @@ img {
 	height: auto;
 }
 
+#gameIconsTbl {
+	display: none;
+}
+
 #twitchIcon {
 	width: 55%;
 	margin-left: 22%;
@@ -24,6 +28,11 @@ img {
 
 .short {
 	height: 600px;
+}
+
+.left {
+	text-align: left !important;
+	padding-left: 35px;
 }
 
 .center td {
