--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -1,7 +1,19 @@
 extends ../layouts/default
 
 block content
-	div.ppb-1.parallax.short
+
+	div#ppb.ppb-1.parallax.short
+	
+	table#ppIntroTbl.game-icons
+		tr
+			td
+				img(src='/images/ppl-1.png')
+			td
+				p.between-text-block.left Welcome to PixelPub! <br />
+					| We are a gaming community, one that strives to be fun, <br />
+					| rewarding, and brings gamers together to do what they love most, gaming. <br /> <br />
+					| The following are some PixelPub community highlights!
+	
 	table#gameIconsTbl.game-icons
 		tr
 			td
@@ -19,27 +31,27 @@ block content
 	a(href="https://discord.gg/uw3PMqV")
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block PixelPub is excited for Destiny 2! We will be bringing you day one footage of Destiny 2 along with a new clan! <br />
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord] and help us as we take on the darkness, save the galaxy and get some awesome loot!
+		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and help us as we take on the darkness, save the galaxy and get some awesome loot!
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
-		h1 All Players Welcome
+		h1 WORLD OF WARCRAFT
 	p#descGame2.between-text-block PixelPub is glad to be partnered with #[a(href="http://us.battle.net/wow/en/guild/bleeding-hollow/The_Bad_Mama_Jamas/") "The Bad Mama Jamas"]. <br/ >
 		| TBMJ is a great group of gamers - helpful, fun, and skilled! Interested in joining? Awesome! <br />
-		| Join in the #[a(href="https://discord.gg/uw3PMqV") Discord], post in the World of Warcraft channel and we can take down the legion!
+		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server], post in the World of Warcraft channel and we can take down the legion!
 	div#picGame3.game-img3.parallax.long 
 	a(href="https://discord.gg/uw3PMqV")
-		h1 Magic the Gathering
+		h1 MAGIC THE GATHERING
 	p#descGame3.between-text-block We have avid MtG players in all different categories: Pauper, cube, modern, standard, commander! <br />
-		| Join in the #[a(href="https://discord.gg/uw3PMqV") Discord] and visit the Magic the Gathering channel today!
+		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and visit the Magic the Gathering channel today!
 	div#picTwitch.twitch.parallax.long
 	a(href="https://www.twitch.tv/pixelpub")
-		h1 PixelPub on Twitch
+		h1 PIXELPUB ON TWITCH
 	p#descTwitch.between-text-block Watch us live on #[a(href="https://www.twitch.tv/pixelpub") Twitch]! <br /> Make sure to say "Hi!" in chat, we love to talk to our twitch chat!
 	div#picDiscord.discord.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
-		h1 Discord Chat!
+		h1 DISCORD SERVER
 	p#descDiscord.between-text-block
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord]! We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
+		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server]! We have voice chat channels, text chat channels and promote a friendly gaming community. <br />
 		| Discord has great iOS & Android applications to keep in touch wherever you go!
 	
 	script(src='/js/jquery/jquery-1.11.3.min.js')
