updated text, updated important documentation (README)

--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -11,7 +11,8 @@ block content
 			td
 				p.between-text-block.left Welcome to PixelPub! <br />
 					| We are a gaming community, one that strives to be fun, <br />
-					| rewarding, and brings gamers together to do what they love most, gaming. <br /> <br />
+					| rewarding, and brings gamers together to do what they love most, gaming. <br />
+					| Be a part of our community by joining our #[a(href="https://discord.gg/uw3PMqV") Discord Server]. <br /> <br />
 					| The following are some PixelPub community highlights!
 	
 	table#gameIconsTbl.game-icons
@@ -31,18 +32,18 @@ block content
 	a(href="https://discord.gg/uw3PMqV")
 		h1 RECRUITING GUARDIANS
 	p#descGame1.between-text-block PixelPub is excited for Destiny 2! We will be bringing you day one footage of Destiny 2 along with a new clan! <br />
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and help us as we take on the darkness, save the galaxy and get some awesome loot!
+		| Help us as we take on the darkness, save the galaxy and get some awesome loot!
 	div#picGame2.game-img2.parallax.long
 	a(href="https://discord.gg/uw3PMqV")
 		h1 WORLD OF WARCRAFT
 	p#descGame2.between-text-block PixelPub is glad to be partnered with #[a(href="http://us.battle.net/wow/en/guild/bleeding-hollow/The_Bad_Mama_Jamas/") "The Bad Mama Jamas"]. <br/ >
-		| TBMJ is a great group of gamers - helpful, fun, and skilled! Interested in joining? Awesome! <br />
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server], post in the World of Warcraft channel and we can take down the legion!
+		| TBMJ is a great group of helpful, fun, and skilled gamers. Interested in joining? Awesome! <br />
+		| Post your interest in the #[a(href="https://discord.gg/uw3PMqV") #world_of_warcraft] channel to have an officer message you.
 	div#picGame3.game-img3.parallax.long 
 	a(href="https://discord.gg/uw3PMqV")
 		h1 MAGIC THE GATHERING
 	p#descGame3.between-text-block We have avid MtG players in all different categories: Pauper, cube, modern, standard, commander! <br />
-		| Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and visit the Magic the Gathering channel today!
+		| Talk MtG on our #[a(href="https://discord.gg/uw3PMqV") #magic_the_gathering] channel!
 	div#picTwitch.twitch.parallax.long
 	a(href="https://www.twitch.tv/pixelpub")
 		h1 PIXELPUB ON TWITCH
