--- a/templates/views/about.pug
+++ b/templates/views/about.pug
@@ -40,7 +40,7 @@ block content
 			| If your game is not mentioned, start the fire in our community for your game and it may show up on the list!
 			|
 			| Q: This all sounds awesome! How do I become part of this community?
-			| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord] and game with us! Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") youtube], #[a(href="https://www.facebook.com/pixelpub") facebook], #[a(href="https://www.instagram.com/pixelpubtv/") instagram], #[a(href="https://twitter.com/pixelpubtv") twitter]), we would love to hear from you!
+			| A: Join our #[a(href="https://discord.gg/uw3PMqV") Discord Server] and game with us! Visit our media sites (#[a(href="https://www.youtube.com/c/pixelpub") youtube], #[a(href="https://www.facebook.com/pixelpub") facebook], #[a(href="https://www.instagram.com/pixelpubtv/") instagram], #[a(href="https://twitter.com/pixelpubtv") twitter]), we would love to hear from you!
 			|
 			| Q: Is it "PixelPub" or "Pixel Pub"?
 			| A: Yes
