mobile css changes and triggered drop action sooner on page

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -66,6 +66,10 @@ h1 {
     padding-bottom: 20px;
 }
 
+#ppIntroDesc.between-text-block {
+	margin-top: -40px;
+}
+
 .between-text-block {
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	font-size: 150%;
@@ -79,6 +83,14 @@ h1 {
 
 /* Adjust Text Size */
 @media only screen and (width: 2560px), screen and (height: 1100px) {
+	#ppIntroDesc.between-text-block {
+		margin-top: -90px;
+	}
+
+	#descGame2.between-text-block {
+		height: 135px;
+	}
+	
     .between-text-block {
 		font-size: 200%;
 	}
@@ -123,7 +135,7 @@ h1 {
 	}
 	
     .between-text-block {
-		font-size: 120% !important;
+		font-size: 100% !important;
 		height: 180px;
 	}
 }
