--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -9,7 +9,7 @@ block content
 			td
 				img(src='/images/ppl-1.png')
 			td
-				p.between-text-block.left Welcome to PixelPub! <br />
+				p#ppIntroDesc.between-text-block.left Welcome to PixelPub! <br />
 					| We are a gaming community, one that strives to be fun, <br />
 					| rewarding, and brings gamers together to do what they love most, gaming. <br />
 					| Be a part of our community by joining our #[a(href="https://discord.gg/uw3PMqV") Discord Server]. <br /> <br />
