added "the crew" page, made mobile changes, updated jquery

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -4,11 +4,24 @@
 
 img {
     max-width: 100%; 
-	display:block; 
+	display: inline-table;
 	height: auto;
 }
 
-#gameIconsTbl {
+.divTable {
+	display: table;
+	width: 100%;
+}
+
+.divTableRow {
+	display: table-row;
+}
+
+.divTableCell {
+	display: table-cell;
+}
+
+.display-none {
 	display: none;
 }
 
@@ -66,10 +79,6 @@ h1 {
     padding-bottom: 20px;
 }
 
-#ppIntroDesc.between-text-block {
-	margin-top: -40px;
-}
-
 .between-text-block {
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	font-size: 150%;
@@ -81,12 +90,25 @@ h1 {
 	opacity: 0.7;
 }
 
+.profile-text-block {
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	font-size: 150%;
+	color: #777;
+	background-color: white;
+	text-align: center;
+	height: 110px;
+	text-shadow: -1px -1px 0px rgba(255,255,255,0.3), 1px 1px 0px rgba(0,0,0,0.8);
+	opacity: 0.7;
+	display: inline-table;
+	vertical-align: middle;
+}
+
+#ppIntroDesc.profile-text-block {
+	margin-left: -50px;
+}
+
 /* Adjust Text Size */
 @media only screen and (width: 2560px), screen and (height: 1100px) {
-	#ppIntroDesc.between-text-block {
-		margin-top: -90px;
-	}
-
 	#descGame2.between-text-block {
 		height: 135px;
 	}
@@ -95,26 +117,72 @@ h1 {
 		font-size: 200%;
 	}
 	
+	.profile-text-block {
+		font-size: 200%;
+	}
+	
+	#ppIntroTblRow1CellLeft.divTableCell {
+		max-width: 500px
+	}
+	
 	.game-icons {
 		height: 350px;
 		margin-left: 15%;
+	}
+	
+	img#ppIntroImg {
+		margin-left: 300px;
 	}
 }
 @media only screen and (width: 1440), screen and (height: 686px) {
     .between-text-block {
 		font-size: 150%;
 	}
+	
+	.profile-text-block {
+		font-size: 150%;
+	}
 }
 
 @media only screen and (width: 1024px), screen and (height: 686px) {
     .between-text-block {
-		font-size: 140%;
+		font-size: 120%;
+	}
+	
+	.profile-text-block {
+		font-size: 120%;
+	}
+	
+	img#ppIntroImg {
+		max-height: 150px;
+		margin-left: 125px;
+	}
+	
+	#ppIntroDesc.profile-text-block {
+		margin-left: -50px !important;
 	}
 }
 
 @media only screen and (width: 768px), screen and (height: 686px) {
     .between-text-block {
-		font-size: 130%;
+		font-size: 100%;
+	}
+	
+	.profile-text-block {
+		font-size: 100%;
+	}
+	
+	img#ppIntroImg {
+		max-height: 100px;
+		margin-left: 100px;
+	}
+	
+	#ppIntroDesc.profile-text-block {
+		margin-left: 50px !important;
+	}
+	
+	img.navbar-icon {
+		max-height: 45px;
 	}
 }
 
@@ -124,8 +192,48 @@ h1 {
 	}
 	
     .between-text-block {
-		font-size: 120% !important;
+		font-size: 100% !important;
 		height: 135px;
+	}
+	
+	.profile-text-block {
+		font-size: 100% !important;
+	}
+	
+	#ppIntroDesc.profile-text-block {
+		margin-left: 0px !important;
+	}
+	
+	img#ppIntroImg {
+		display: none;
+	}
+	
+	.divTableCell {
+		display: inline !important;
+	}
+}
+
+@media only screen and (max-width: 376px), screen and (max-height: 686px) {
+	h1 {
+		font-size: 190% !important;
+	}
+	
+    .between-text-block {
+		font-size: 90% !important;
+		height: 180px;
+	}
+	
+	.profile-text-block {
+		font-size: 90% !important;
+		height: 180px;
+	}
+	
+	#ppIntroDesc.profile-text-block {
+		margin-left: -10px !important;
+	}
+	
+	.divTableCell {
+		display: inline !important;
 	}
 }
 
@@ -137,6 +245,15 @@ h1 {
     .between-text-block {
 		font-size: 100% !important;
 		height: 180px;
+	}
+	
+	.profile-text-block {
+		font-size: 100% !important;
+		height: 180px;
+	}
+	
+	.divTableCell {
+		display: inline !important;
 	}
 }
 
